# Mercurius

./: LICENSE  README.md  example.db  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: main.py
src/: mercurius.py
src/mercurius/: __init__.py
src/mercurius_fastcrud.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_crud.py
